--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ header:
                         <span class="pl-4">Australia  </span>
                     </p>
                     <a href="tel:+61740577188" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+61 7 4057 7188</span></a>
-                    <a href="" class="block mt-1" aria-label="Reach Cairns via their contact form">You can also reach Cairns via their contact form <span class="contact-dark-blue">here</span></a>
+                    <a href="https://www.skyparkcairns.com/" class="block mt-1" aria-label="Visit the Skypark Cairns website">Visit the Skypark Cairns website <span class="contact-dark-blue">here</span></a>
                 </li>
                 <li class="p-5p bg-grey rounded-md">
                     <p class="text-lg font-medium pb-2p">Skypark Sentosa</p>
@@ -93,7 +93,7 @@ header:
                         <span class="pl-4">Singapore  </span>
                     </p>
                     <a href="tel:+6569113070" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+65 6911 3070</span></a>
-                    <a href="" class="block mt-1" aria-label="Reach Sentosa via their contact form">You can also reach Sentosa via their contact form <span class="contact-dark-blue">here</span></a>
+                    <a href="https://www.skyparksentosa.com/" class="block mt-1" aria-label="Visit the Skypark Sentosa website">Visit the Skypark Sentosa website <span class="contact-dark-blue">here</span></a>
                 </li>
                 <li class="p-5p bg-grey rounded-md">
                     <p class="text-lg font-medium pb-2p">Skypark Macau</p>
@@ -104,7 +104,7 @@ header:
                         <span class="pl-4">SAR China </span>
                     </p>
                     <a href="tel:+85389888656" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+853 8988 8656</span></a>
-                    <a href="" class="block mt-1" aria-label="Reach Macau via their contact form">You can also reach Macau via their contact form <span class="contact-dark-blue">here</span></a>
+                    <a href="https://www.skyparkmacau.com/" class="block mt-1" aria-label="Visit the Skypark Macau website">Visit the Skypark Macau website <span class="contact-dark-blue">here</span></a>
                 </li>
                 <li class="p-5p bg-grey rounded-md">
                     <p class="text-lg font-medium pb-2p">Skypark Normandie</p>
@@ -115,7 +115,7 @@ header:
                         <span class="pl-4">France</span>
                     </p>
                     <a href="tel:+33231663166" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+33 2 31 66 31 66</span></a>
-                    <a href="" class="block mt-1" aria-label="Reach Normandie via their contact form">You can also reach Normandie via their contact form <span class="contact-dark-blue">here</span></a>
+                    <a href="https://viaducdelasouleuvre.com/" class="block mt-1" aria-label="Visit the Skypark Normandie website">Visit the Skypark Normandie website <span class="contact-dark-blue">here</span></a>
                 </li>
                 <li class="p-5p bg-grey rounded-md">
                     <p class="text-lg font-medium pb-2p">Pondok Santi Estate</p>
@@ -127,7 +127,7 @@ header:
                         <span class="pl-4">Indonesia</span>
                     </p>
                     <a href="tel:+6281907057504" class="block mt-2" aria-label="Call us">Call <span class="contact-dark-blue">+62 819 0705 7504</span></a>
-                    <a href="" class="block mt-1" aria-label="Reach Pondok Santi Estate via their contact form">You can also reach Pondok Santi Estate via their contact form <span class="contact-dark-blue">here</span></a>
+                    <a href="https://pondoksanti.com/" class="block mt-1" aria-label="Visit the Pondok Santi Estate website">Visit the Pondok Santi Estate website <span class="contact-dark-blue">here</span></a>
                 </li>
             </ul>
         </div>   
