--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -29,9 +29,9 @@ purpose-image-alt: Five people enjoying their time, with a bungy tower visible a
 promise-image: /images/our-promise-aj-hackett-international.png
 promise-image-position: 50% 50%
 promise-image-alt: Skypark site showcasing our commitment to sustainability, adventure, and innovation in tourism.
-values-image: /images/our-values-aj-hackett-international.png
+values-image: /images/values-aj-hackett-international.png
 values-image-position: 50% 50%
-values-image-alt:   
+values-image-alt: AJ Hackett smiling into the camera.  
 ---
 
 <!-----Purpose-------->
@@ -98,7 +98,7 @@ values-image-alt:
                 <p class="title-font text-xl">Experience</p>
                 <p class="pb-5p"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
             </div>
-            <div class="relative h-full min-h-30 sm:min-h-50">
+            <div class="relative h-full min-h-50">
                 <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
                     src="{{ page.values-image }}" 
                     style="object-position: {{ page.values-image-position }};" 
