--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -50,7 +50,7 @@ quote-image-position: 70% 10%
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
             </div>
         </div>
         
@@ -60,7 +60,7 @@ quote-image-position: 70% 10%
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-2 }}" style="object-position: {{ page.image-2-position }};" alt="{{ page.image-2-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-2 }}" style="object-position: {{ page.image-2-position }};" alt="{{ page.image-2-alt }}" />
             </div>
             <div class="hidden sm:block pl-5p">
                 <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
@@ -74,7 +74,7 @@ quote-image-position: 70% 10%
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-3 }}" style="object-position: {{ page.image-3-position }};" alt="{{ page.image-3-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-3 }}" style="object-position: {{ page.image-3-position }};" alt="{{ page.image-3-alt }}" />
             </div>
         </div>
     </div>
