--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -71,7 +71,7 @@ people:
         <div class="sm:grid sm:grid-cols-5 gap-5 mb-5p">
           <div class="col-span-2">
             <div class="relative h-full min-h-40 sm:min-h-50">
-              <img class="absolute inset-0 w-full h-full object-cover rounded-3xl"
+              <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl"
                    src="{{ person.image }}" 
                    style="object-position: {{ person['image-position'] }};" 
                    alt="{{ person['image-alt'] }}" />
