--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -46,7 +46,7 @@ values-image-alt: AJ Hackett smiling into the camera.
                 <p class="pb-5p"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
                     src="{{ page.purpose-image }}" 
                     style="object-position: {{ page.purpose-image-position }};" 
                     alt="{{ page.purpose-image-alt }}" />
@@ -68,7 +68,7 @@ values-image-alt: AJ Hackett smiling into the camera.
                 <p class="pb-5p"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
                     src="{{ page.promise-image }}" 
                     style="object-position: {{ page.promise-image-position }};" 
                     alt="{{ page.promise-image-alt }}" />
@@ -99,7 +99,7 @@ values-image-alt: AJ Hackett smiling into the camera.
                 <p class="pb-5p"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
             </div>
             <div class="relative h-full min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
                     src="{{ page.values-image }}" 
                     style="object-position: {{ page.values-image-position }};" 
                     alt="{{ page.values-image-alt }}" />
