--- a/reconciliation.html
+++ b/reconciliation.html
@@ -42,7 +42,7 @@ reconciliation-pdf: /reconciliation-ajhi.pdf
           </div>
         <!-- Image 1 -->
       <div class="relative col-span-1 h-full mt-10p sm:mt-0" style="min-height: 200px;">
-          <img class="absolute inset-0 w-full h-full object-contain rounded-3xl" src="{{ page.reconciliation-image }}" style="object-position: {{ page.reconciliation-position }};" alt="{{ page.reconciliation-alt }}" />
+          <img loading="lazy" class="absolute inset-0 w-full h-full object-contain rounded-3xl" src="{{ page.reconciliation-image }}" style="object-position: {{ page.reconciliation-position }};" alt="{{ page.reconciliation-alt }}" />
       </div>
       </div>
     </div>
