--- a/sustainability.html
+++ b/sustainability.html
@@ -95,12 +95,12 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
            <!-- Image 1 -->
             <div class="relative sm:col-span-1 sm:row-span-1 mb-2p" style="min-height: 200px;">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok-1-image }}" style="object-position: {{ page.pondok-1-position }};" alt="{{ page.pondok-1-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok-1-image }}" style="object-position: {{ page.pondok-1-position }};" alt="{{ page.pondok-1-alt }}" />
             </div>
 
             <!-- Image 2 -->
             <div class="relative sm:col-span-1 sm:row-span-1" style="min-height: 200px;">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok-2-image }}" style="object-position: {{ page.pondok-2-position }};" alt="{{ page.pondok-2-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok-2-image }}" style="object-position: {{ page.pondok-2-position }};" alt="{{ page.pondok-2-alt }}" />
             </div>
 
         </div>
@@ -124,7 +124,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
             </div>
             <!-- Image 1 -->
             <div class="relative h-full min-h-30 sm:min-h-50 mt-5p">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
             </div>
         </div>
     </div>
@@ -144,7 +144,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
             </div>
             <!-- Image 1 -->
             <div class="relative h-full min-h-30 sm:min-h-40">
-                <img class="absolute inset-0 w-full h-full object-contain" src="{{ page.natura-image }}" style="object-position: {{ page.natura-position }};" alt="{{ page.natura-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-contain" src="{{ page.natura-image }}" style="object-position: {{ page.natura-position }};" alt="{{ page.natura-alt }}" />
             </div>
         </div>
     </div>
@@ -166,7 +166,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
             <!-- Image 1 -->
             <div class="relative h-full min-h-30 sm:min-h-50">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.beehives-image }}" style="object-position: {{ page.beehives-position }};" alt="{{ page.beehives-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.beehives-image }}" style="object-position: {{ page.beehives-position }};" alt="{{ page.beehives-alt }}" />
             </div>
         </div>
     </div>
