--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -48,6 +48,8 @@ experience:
      img-alt: Person doing a bungy jump at sunset at Skypark Sentosa, with vibrant sky colors in the background.
    - img-url: /images/tandem-cairns-skypark-aj-hackett-international.png
      img-alt: Tandem jump at Cairns Skypark by AJ Hackett International.
+   - img-url: /images/accessibility-aj-hackett-international.png
+     img-alt: Man in a wheelchair takes a thrilling bungy jump from a high tower, capturing the excitement and joy of the experience.
    locations: 
    - name: "Cairns"
      url: skypark-aj-hackett.html#cairns
@@ -64,8 +66,8 @@ experience:
    description: Inspired by the Vanuatu ritual called land diving and the Oxford University Dangerous Sports Club’s experimental jumps in the 1970s, AJ Hackett and fellow adventurer Chris Sigglekow sought ways to make bungy jumping safe. By the mid-80s, AJ Hackett had created a super-stretchy elastic bungy cord that performed safely and consistently, with cords created at custom lengths that allowed for various jump heights and locations.
  - name: Swings
    id: "swings" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/giant-swing-aj-hackett-international.png
+   image-position: 50% 50%
    image-alt: "Swings"
    locations: 
    - name: "Cairns"
@@ -80,8 +82,8 @@ experience:
    description: First introduced in the year 2000, you will awaken your inner child with the giant swing or 'swing.' Whether you’re in Sentosa flying above the beach, in Cairns where the Barrier Reef meets the rainforest, or in Normandy next to the impressive pillars of the viaduct, we guarantee a rush like no other with vistas only found in these special places. All of our swings cater to solo, dual, or triple customers going at once, with speeds reaching 130 km/h in 3.5 seconds! It is the perfect activity for you and your friends to enjoy together and push your limits.
  - name: Zipline
    id: "zipline" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/zipline-aj-hackett-international.png
+   image-position: 50% 50%
    image-alt: "Zipline"
    locations: 
    - name: "Normandie"
@@ -90,8 +92,8 @@ experience:
    description: The giant zipline at Skypark Normandie, known as the 'Scable,' is the ideal activity to start exploring your limits. This activity will give you a taste of the unique sensations that we offer on-site and is also the best way to discover our valley and its amazing flora and fauna. Starting from a specially designed launch area, you will be released onto our 400m cable at speeds reaching 100 km/h, where you, by yourself or with your partner, will get a great introduction to our adrenaline-packed activities.
  - name: Skybridge & Skycube
    id: "skybridge" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/skycube-aj-hackett-international.png
+   image-position: 50% 5%
    image-alt: "Skybridge"
    locations: 
    - name: "Normandie"
@@ -100,8 +102,8 @@ experience:
    description: For more than 30 years, AJ Hackett has created many thrilling activities from this 140-meter-long footbridge. The skybridge is both the access point to the activities of Skypark Normandie and a unique place to be as close as possible to the practitioners who come here to take on many challenges. At the entrance, you can enjoy a terrace to watch the departure of the giant zip line. As you advance on the footbridge, you must gradually master the void that presents itself beneath your feet—10, 20, 30, and then 60 meters of emptiness to arrive at the second pile of the viaduct. At 140 meters, it can feel long when, with each step, you have to control your fear of heights. But in the end, it is the promise of a unique point of view of the Souleuvre valley—a 360-degree panorama of this preserved and protected nature.
  - name: Walk The Plank
    id: "walktheplank" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/walk-the-plank-aj-hackett-international.png
+   image-position: 50% 56%
    image-alt: "Walk The Plank"
    locations: 
    - name: "Cairns"
@@ -110,8 +112,8 @@ experience:
    description: As in the olden days, try yourself by walking the plank, perched 50 m in the air and 140 m above sea level, with amazing views of the ocean and rainforest. This activity is the perfect way to introduce yourself to heights. Our team will guide you along the way to help you push your boundaries. If you’re confident enough, we will let you dangle over the edge of the plank for the perfect photo opportunity!
  - name: Luge
    id: "luge" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/luge-aj-hackett-international.png
+   image-position: 50% 35%
    image-alt: "Luge"
    locations: 
    - name: "Normandie"
@@ -120,8 +122,8 @@ experience:
    description: A unique sled with speeds up to 45 km/h. Sledding is a simple, family-friendly, low-cost pleasure, ideal for both summer and winter. A leisure activity that brings you great sliding sensations without effort, sledding can be practiced alone or in pairs. It can be enjoyed from 3 years old and accommodates individuals weighing up to 180 kg. Make your way down the valley for a fun-filled experience immersed in the Natura 2000 protected area; you may see a cow or two in the adjacent pastures!
  - name: Adventure Parks
    id: "adventureparks" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/adventure-park-aj-hackett-international.png
+   image-position: 50% 50%
    image-alt: "Adventure Parks"
    locations: 
    - name: "Normandie"
@@ -130,8 +132,8 @@ experience:
    description: "The perfect activity for all ages, with multi-leveled courses, allows you to challenge yourself through different obstacles ranging from mini ziplines to roped walkways and climbing challenges. We offer two types of adventure parks: the original, where you are harnessed the whole way through the activities, or the new generation, which is netted! This means no harness is needed—just your own bravery as you try to complete the challenges ahead!"
  - name: Climbing Walls
    id: "climbingwalls" 
-   image: /images/temp-img.jpg
-   image-position: center
+   image: /images/climbing-wall-aj-hackett-international.png
+   image-position: 50% 50%
    image-alt: "Climbing Walls"
    locations: 
    - name: "Normandie"
@@ -214,17 +216,17 @@ experience:
         <!-- Large Featured Image -->
         <div class="relative h-80 sm:h-96 lg:h-112">
             <a href="{{ item.url }}">
-                <img class="absolute inset-0 w-full h-full object-cover rounded-3xl pb-1.5" src="{{ item.image }}" style="object-position: {{ item.image-position }};" alt="{{ item.image-alt }}" />
+                <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl pb-1.5" src="{{ item.image }}" style="object-position: {{ item.image-position }};" alt="{{ item.image-alt }}" />
             </a>
         </div>
 
         <!-- Conditional Gallery Images -->
         {% if item.name == "Bungy" %}
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-2 w-full overflow-x-auto">
+        <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-2 w-full overflow-x-auto">
             {% for image in item.gallery-images %}
             <a class="col-span-1" href="{{ image.img-url }}" aria-label="View larger version of the image">
                 <div class="aspect-square relative">
-                    <img class="w-full h-full object-cover object-center rounded-xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
+                    <img loading="lazy" class="w-full h-full object-cover object-center rounded-xl" src="{{ image.img-url }}" alt="{{ image.img-alt }}">
                 </div>
             </a>
             {% endfor %}
