--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ safety:
               <a href="/meet-aj-hackett.html" class="button" aria-label="Learn more about AJ Hackett and his adventure journey">Find out more</a>
           </div>
         </div>
-        <div class="relative h-full min-h-30 sm:min-h-50">
-            <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-1 }}" style="object-position: {{ page.image-1-position }};" alt="{{ page.image-1-alt }}" />
+        <div>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1004346175?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="20240829_AJHI_Promo Video_Cut 11"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
     </div>
   </div>
