--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -144,43 +144,8 @@ experience:
 
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
-    <div class="pb-5p">
         <p class="pb-5p sm:pb-2p"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
-        <p class="pb-5p sm:pb-0"> Check out each individual experience of Skypark by AJ Hackett.</p>
-    </div>
-
-    <a href="#bungy">
-        <h3 class="title-font text-xl pb-1p grow"> Bungy </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#swings">
-        <h3 class="title-font text-xl pb-1p grow"> Swings </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#ziplines">
-        <h3 class="title-font text-xl pb-1p grow"> Ziplines </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#skybridge">
-        <h3 class="title-font text-xl pb-1p grow"> Skybrige & Skycube </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#walktheplank">
-        <h3 class="title-font text-xl pb-1p grow"> Walk The Plank </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#luge">
-        <h3 class="title-font text-xl pb-1p grow"> Luge </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#adventureparks">
-        <h3 class="title-font text-xl pb-1p grow"> Adventure Parks  </h3>
-    </a>
-    <hr class="pb-1p">
-    <a href="#climbingwalls">
-        <h3 class="title-font text-xl pb-1p grow"> Climbing Walls </h3>
-    </a>
-    <hr class="pb-1p">
+        <p class="pb-5p sm:pb-0"> Check out each individual experience of Skypark by AJ Hackett below.</p>
   </div> 
 </section>
 
