--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@ header:
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-5p mb-10p lg:mb-5p">
             <div class="pr-5p">
-                <p class="text-lg">Please fill out our contact form to get in touch with us for any inquiries or requests. </p>
+                <p class="text-lg pb-2p">Please fill out our contact form to get in touch with us for any enquiries or requests. </p>
+                <p>For press or media enquiries, please email <a href="mailto:pr@ajhackett.com"><strong>pr@ajhackett.com</strong></a>.</p>
             </div>
             <div>
                 <form action="#" method="POST" class="space-y-4 mb-15p">
