--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -41,7 +41,7 @@ gallery-images:
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-15p sm:pt-10p xl:pt-5p pb-10p sm:pb-0">
     <div>
-        <p class="pb-10p sm:pb-5p xl:pb-2p"> Set amidst the <strong>idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses.</strong> Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
+        <p class="pb-10p sm:pb-5p xl:pb-2p"> Set amidst the idyllic shores of Gili Trawangan, Pondok Santi Estate offers an escape from the ordinary. From our luxurious accommodations to our exquisite dining experiences, every moment is crafted to elevate your senses. Welcome to a world where serenity meets sophistication, where every detail is designed to enchant and inspire. Welcome to Pondok Santi Estate.
         </p>
         <div class="mb-15p sm:mb-10p xl:mb-5p sm:mt-2p md:mt-0">
             <a href="https://pondoksanti.com/" class="button" aria-label="Visit Pondok Santi Estate website for more information">Visit Pondok Santi Estate</a>
