--- a/reconciliation.html
+++ b/reconciliation.html
@@ -38,7 +38,7 @@ reconciliation-pdf: /reconciliation-ajhi.pdf
           <!-- Text Content -->
           <div class="col-span-1 sm:pr-5p">
               <p class="pb-5p sm:pb-2p">In 2024, AJ Hackett International was endorsed by Reconciliation Australia for the launch of our ‘Reflect RAP,’ a Reconciliation Action Plan (RAP) designed to lay the foundations and prepare our workplace for reconciliation initiatives. Our respect for the Traditional Custodians begins with recognizing their care for Country and their extensive knowledge of the land developed over millennia. In Australia, Skypark Cairns and the Djapugay community provide a valuable blueprint for future Skypark by AJ Hackett businesses. This is particularly relevant due to our proximity to world heritage-listed rainforest and our commitment to acting sustainably and protecting the abundant and biodiverse ecosystem.</p>
-              <a href="{{ page.reconciliation-pdf }}" class="text-dark-blue" target="_blank">Click here to learn more about our Reconciliation Action Plan.</a>
+              <a href="{{ page.reconciliation-pdf }}" class="underline" target="_blank">Click here to learn more about our Reconciliation Action Plan.</a>
           </div>
         <!-- Image 1 -->
       <div class="relative col-span-1 h-full mt-10p sm:mt-0" style="min-height: 200px;">
